--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -13,15 +13,6 @@ services:
       mode: replicated
       replicas: 1
 
-  logger-service:
-    build: 
-      context: ./../logger-service
-      dockerfile: ./../logger-service/logger-service.dockerfile
-    restart: always
-    deploy:
-      mode: replicated
-      replicas: 1
-
   authentication-service:
     build: 
       context: ./../authentication-service
@@ -34,6 +25,33 @@ services:
       replicas: 1
     environment:
       DSN: "host=postgres port=5432 user=postgres password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
+
+  logger-service:
+    build: 
+      context: ./../logger-service
+      dockerfile: ./../logger-service/logger-service.dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+
+  mailer-service:
+    build: 
+      context: ./../mail-service
+      dockerfile: ./../mail-service/mail-service.dockerfile
+    restart: always
+    deploy:
+      mode: replicated
+      replicas: 1
+    environment:
+      MAIL_DOMAIN: localhost
+      MAIL_HOST: mailhog
+      MAIL_PORT: 1025
+      MAIL_ENCRYPTION: none
+      MAIL_USERNAME: ""
+      MAIL_PASSWORD: ""
+      FROM_NAME: "John Smith"
+      FROM_ADDRESS: "john.smith@example.com"
 
   postgres:
     image: 'postgres:14.2'
@@ -60,4 +78,8 @@ services:
     volumes:
       - ./db-data/mongo/:/data/db
      
-
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - "1025:1025"
+      - "8025:8025"
