--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -35,6 +35,14 @@ services:
       mode: replicated
       replicas: 1
 
+  listener-service:
+    build: 
+      context: ./../listener-service
+      dockerfile: ./../listener-service/listener-service.dockerfile
+    deploy:
+      mode: replicated
+      replicas: 1
+
   mailer-service:
     build: 
       context: ./../mail-service
@@ -83,3 +91,13 @@ services:
     ports:
       - "1025:1025"
       - "8025:8025"
+
+  rabbitmq:
+    image: 'rabbitmq:3.9-alpine'
+    ports:
+      - "5672:5672"
+    deploy:
+      mode: replicated
+      replicas: 1
+    volumes:
+      - ./db-data/rabbitmq/:/var/lib/rabbitmq/  
