--- a/project/ingress.yml
+++ b/project/ingress.yml
@@ -9,7 +9,7 @@ spec:
     - host: front-end.info
       http:
         paths:
-          - path: /*
+          - path: /
             pathType: Prefix
             backend:
               service:
@@ -19,7 +19,7 @@ spec:
     - host: broker-service.info
       http:
         paths:
-          - path: /*
+          - path: /
             pathType: Prefix
             backend:
               service:
